Update to Scala 2.11.8 and Gradle 2.13; give up on scoverage